# ocamlPres

./: .gitignore  .ocamlformat  a.out  dune-project  flake.nix  index.html  myPro.opam  opam-selection.nix
lib/: dune  main.ml  myPro.ml
lib/slides/: dune  test.ml
static/: d3_script.js  init_reveal.js
test/: dune  myPro.ml
